# CarBot-PoC

./: README.md  pyproject.toml
app/: __init__.py  config.py
app/agent/: autonova.html 
app/agent/agents/: sales_agent.py
app/agent/prompts/: prompts.py
app/agent/tools/: finance_planing.py  product_search.py  value_proposition_rag.py
app/api/: health_check.py  whatsapp.py
app/services/: twilio_service.py
tests/: conftest.py  test_product_search.py
